--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,25 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+   
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
-    }
+      "@/*":["./*"], 
+      "@/components/*": ["./components/*"],
+      "@/layout/*": ["./layout/*"],
+
+      "@/models/*": ["./models/*"],
+      "@/styles/*": ["./styles/*"],
+      "@/api-client/*": ["./api-client/*"],
+      "@/hooks/*": ["./hooks/*"],
+      "@/utils/*": ["./utils/*"],
+      "@/images/*": ["./images/*"],
+
+      
+
+
+
+    },
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
