--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "date-fns": "^2.30.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "gray-matter": "^4.0.3",
     "http-proxy": "^1.18.1",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remark": "^14.0.3",
+    "remark-html": "^15.0.2",
     "swr": "^2.2.0",
     "typescript": "5.1.3"
   }
