--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@types/remark-prism": "^1.3.4",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "cookies": "^0.8.0",
@@ -32,9 +33,20 @@
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-document": "^6.1.0",
+    "rehype-format": "^4.0.1",
+    "rehype-slug": "^5.1.0",
+    "rehype-stringify": "^9.0.3",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
+    "remark-parse": "^10.0.2",
+    "remark-prism": "^1.3.6",
+    "remark-rehype": "^10.1.0",
+    "remark-toc": "^8.0.1",
     "swr": "^2.2.0",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "unified": "^10.1.2",
+    "vfile-reporter": "^8.0.0"
   }
 }
