--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.1.1",
     "@mui/icons-material": "^5.11.16",
+    "@mui/joy": "^5.0.0-alpha.86",
     "@mui/material": "^5.13.6",
     "@types/axios": "^0.14.0",
     "@types/cookies": "^0.7.7",
@@ -35,6 +36,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-toastify": "^9.1.3",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-document": "^6.1.0",
     "rehype-format": "^4.0.1",
