--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "gray-matter": "^4.0.3",
     "http-proxy": "^1.18.1",
     "next": "13.4.7",
+    "qs": "^6.11.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-intersection-observer": "^9.5.2",
+    "react-quill": "^2.0.0",
     "react-toastify": "^9.1.3",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-document": "^6.1.0",
@@ -48,6 +51,7 @@
     "remark-prism": "^1.3.6",
     "remark-rehype": "^10.1.0",
     "remark-toc": "^8.0.1",
+    "sharp": "^0.32.6",
     "swr": "^2.2.0",
     "typescript": "5.1.3",
     "unified": "^10.1.2",
